fixed problem with user registration (DOM #4)
[F] - FIXED
* resolved problem with signaling password strength if the entered password was too long:
  - the error always appeared above 35 characters entered
  - all "notification" lights went out, regardless of the number of character groups used, thus regardless of the password strength
* at startup JS dynamically limits the attribute of the maximum length of the password field
  - later, whenever the content of the password field changes (inside the "input" event handler), the existence of this attribute or its correct value is verified; this attribute is successfully assigned as a reference when something does not match
* improved element appearance with password strength
  - better alignment of both elements in the vertical and horizontal axis, inside their container
* other improvements:
  - added "maxlength" attribute to the password field in the form, its value should be immediately updated to the correct one via JS
  - the text description regarding password requirements has been updated under the password field
  - minor corrections in CSS, removing unnecessary or overlapping rules

--- a/dom-4-rejestracja-uzytkownika/register-me.css
+++ b/dom-4-rejestracja-uzytkownika/register-me.css
@@ -36,7 +36,6 @@ h5 {
 p {
     text-align: justify;
     /* margin-top: 1em; */
-
 }
 
 input {
@@ -88,7 +87,6 @@ input[disabled]
     color: #999;
     border-color: #aaa;
     cursor: not-allowed;
-
 }
 
 .registration-container {
@@ -139,26 +137,32 @@ input[disabled]
 
 .password-strength {
     display: inline-block;
+    text-align: center;
 }
 
 .password-strength > p {
     display: inline-block;
+    margin-bottom: 0;
 }
 
 .password-strength > ul {
     list-style-type: none;
     display: inline-block;
+    vertical-align: middle; /* równe ułożenie w pionie, też względem tekstu sąsiedniego paragrafu */
     line-height: 0.7em;  /* bez tej wartości elementy dostają jakiegoś nienaturalnego odstępu pod sobą... niewielki, ale jednak o 30% większy niż pozostałe trzy (i równe) strony  */
     padding: 0.5em;
+    padding-right: 0;   /* usunięcie niepotrzebnego odstępu, skoro element nie posiada innego tła i obrysu  */
         /* border: 2px solid #aaa; */
         /* background-color: #ddd; */
     margin: 0;
+    margin-left: 0.5em; /* korekta na wyśrodkowanie i "wyjustowanie" elementów w DIVie, by mieć szerokość i skojarzenie z poprzednim tekstem, też odnośnie hasła  */
 }
 
 .password-strength li {
     display: inline-block;
-    width: 3em;
+    width: 3.5em;
     padding: 0.5em;
+    margin: 0.15em;
     border: 2px solid #666;
     background-color: #ccc;
 }
